# zephyr_secure_inference

./: CMakeLists.txt  Kconfig  LICENSE.md  README-manual-provisioning.md  README.md  README.rst  overlay-network.conf  prj.conf  west.yml
.github/workflows/: ci.yml
boards/: b_u585i_iot02a_ns.overlay  mps2_an521.overlay
docs/: enc-payload.md
include/: azure.h  bootstrap.h  caserver.h  device_client_tls_key.h  dhcpwait.h  infer_mgmt.h  infer_model_mgmt.h  key_mgmt.h  local_key.h  provision.h  shell_common.h  tfm_partition_huk.h  tfm_partition_tflm.h  tfm_partition_utvm.h  tfm_sip_srv_api.h  util_app_cfg.h  util_app_log.h  util_sformat.h  x509_csr_gen.h
include/cose/: cose_verify.h  mbedtls_ecdsa_verify_sign.h
include/infer_model/: infer_model_mgmt.h
include/keys/: key_mgmt.h  mbedtls_ecdsa_verify_sign.h  pk_import_verify_sign.h
include/pk/: pk_import_verify_sign.h
include/shell/: cmd_infer.h  cmd_key_mgmt.h
include/tfm_sp_inf/: tfm_secure_infer_partitions_service_api.h  tfm_sip_srv_api.h
scripts/: README.rst  cose_verify.py
src/: .gitignore  azure-config.h  azure-config.h.template  azure.c  bootstrap.c  caserver.c  cose_verify.c  cose_verify.h  device_client_tls_key.c  dhcpwait.c  infer_mgmt.c  infer_model_mgmt.c  key_mgmt.c  local_key.c  main.c  mbedtls_ecdsa_verify_sign.c  pk_import_verify_sign.c  provision.c  test_certs.c  test_certs.h  tfm_partition_huk.c  tfm_partition_tflm.c  tfm_partition_utvm.c  tfm_secure_infer_partitions_service_api.c  tfm_sip_srv_api.c  util_app_cfg.c  util_app_log.c  util_sformat.c  x509_csr_gen.c
src/cose/: cose_verify.c  mbedtls_ecdsa_verify_sign.c
src/shell/: cmd_azure.c  cmd_infer.c  cmd_info.c  cmd_key_mgmt.c  cmd_keys.c  shell.c  shell_common.c
src/tls_config/: user-tls.conf
tests/tfm_sp/test_service/: tfm_test_helper_service_api.c  tfm_test_helper_service_api.h
tests/tfm_sp/tfm_huk_deriv_srv/: CMakeLists.txt  Kconfig
tests/tfm_sp/tfm_huk_deriv_srv/src/: main.c
tfm_secure_inference_partitions/: tfm_manifest_list.yaml.in
tfm_secure_inference_partitions/tfm_huk_deriv_srv/: CMakeLists.txt  cbor_cose.c  cbor_cose_api.h  tfm_huk_deriv_srv.c  tfm_huk_deriv_srv.yaml
tfm_secure_inference_partitions/tfm_huk_key_derivation_service/: CMakeLists.txt  cbor_cose.c  cbor_cose.h  cbor_cose_api.h  tfm_huk_key_derivation_service.c  tfm_huk_key_derivation_service.yaml  tfm_huk_key_derivation_service_api.c  tfm_huk_key_derivation_service_api.h
tfm_secure_inference_partitions/tfm_tflm_service/: CMakeLists.txt  tfm_tflm_service.c  tfm_tflm_service.yaml
tfm_secure_partitions/: tfm_manifest_list.yaml.in
tfm_secure_partitions/tfm_huk_deriv_srv/: CMakeLists.txt  aat.c  aat.h  cbor_cose.c  cbor_cose.h  cbor_cose_api.h  config.cmake  nv_ps_counters.c  nv_ps_counters.h  tfm_huk_deriv_srv.c  tfm_huk_deriv_srv.h  tfm_huk_deriv_srv.yaml  tfm_huk_deriv_srv_api.c  tfm_huk_deriv_srv_api.h
tfm_secure_partitions/tfm_test_helper_service/: CMakeLists.txt  tfm_test_helper_service.c  tfm_test_helper_service.yaml
tfm_secure_partitions/tfm_tflm_service/: CMakeLists.txt  README.md  tfm_tflm_service.c  tfm_tflm_service.yaml  tfm_tflm_service_api.c  tfm_tflm_service_api.h
tfm_secure_partitions/tfm_utvm_service/: CMakeLists.txt  README.md  tfm_utvm_service.c  tfm_utvm_service.yaml  tfm_utvm_service_api.c  tfm_utvm_service_api.h
tfm_secure_partitions/tfm_utvm_service/tfm_utvm_platform/: utvm_platform.c  utvm_platform.h
tfm_secure_partitions/tfm_utvm_service/utvm/: CMakeLists.txt
